syntax = "proto3";

package auth;

service Login {
  // 用户登陆
  rpc Login (LoginRequest) returns (LoginReply) {}
  // 验证用户登陆
  rpc Check(CheckRequest) returns(Empty){}
}
message LoginRequest {
  // 账号
  string username = 1;
  // 密码
  string password = 2;
}

message LoginReply {
  string auth = 1;
}

message CheckRequest{
  string auth = 1;
}
message Empty{}
